--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -77,7 +77,7 @@
     flex: 1;
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: center;
     position: relative;
     left: 100px;
 
@@ -86,6 +86,28 @@
 .gpt3_header-image img{
     width: 100%;
     height: 100%;
+}
+
+.gpt3__header-content__people{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.gpt3__header-content__people p{
+ 
+    font-family: var(--font-family);
+    
+    font-weight: 500;
+    line-height: 38px;
+    letter-spacing: 0em;
+    text-align: left;
+}
+
+.gpt3__header-content__people img{
+    width: 40%;
+    height: 50%;
 }
 
 @media screen and (max-width: 1050px) {
@@ -118,6 +140,13 @@
         font-size: 16px;
         line-height: 24px;
     }
+
+    .gpt3_header-image{
+       
+        left: 0px;
+    
+    }
+    
 
  }
 
