--- a/src/containers/features/features.css
+++ b/src/containers/features/features.css
@@ -11,9 +11,9 @@
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
-
+    font-family: var(--font-family);
     text-align: left;
-    margin: 5rem;
+    margin: 3rem;
 }
 
 .gpt3__features-heading p{
